--- a/src/admin_Panel/banner/Banner.css
+++ b/src/admin_Panel/banner/Banner.css
@@ -3,16 +3,16 @@
     cursor: pointer;
     color: red;
     position: absolute;
-    left: 84%;
-    top: 20%;
+    left: 90%;
+    top: 14%;
 }
 
-.banner-img{
+.banner-img {
     position: relative;
-    padding: 20px;
+    padding: 12px 0px;
     border-radius: 8px;
     border: 1px solid #c0bebe;
     transition: 0.3s ease-in-out;
-    box-shadow: 4px 4px 3px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.3);
     width: 100%;
 }
