--- a/src/admin_Panel/product/Product_details.css
+++ b/src/admin_Panel/product/Product_details.css
@@ -7,3 +7,17 @@ tbody tr td{
  vertical-align: middle;    
  
 }
+#myInput {
+    box-sizing: border-box;
+    /* background-image: url('searchicon.png'); */
+    background-position: 14px 12px;
+    background-repeat: no-repeat;
+    font-size: 16px;
+    padding: 14px 20px 12px 45px;
+    border: none;
+    border-bottom: 1px solid #ddd;
+}
+
+#myInput:focus {
+    outline: 3px solid #ddd;
+}
