--- a/src/admin_Panel/banner/Banner.css
+++ b/src/admin_Panel/banner/Banner.css
@@ -6,13 +6,22 @@
     left: 90%;
     top: 14%;
 }
-
+.banner-head{
+    padding: 40px 0px;
+}
 .banner-img {
-    position: relative;
+position: relative;
     padding: 12px 0px;
     border-radius: 8px;
     border: 1px solid #c0bebe;
     transition: 0.3s ease-in-out;
     box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.banner-img img{
     width: 100%;
 }
